added ui to the game. Updated js logic

--- a/rps.html
+++ b/rps.html
@@ -6,6 +6,23 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="rps.js"></script>
+    <div class="container">
+        <div class="buttons">
+            <button id="btn-rock">ROCK</button>
+            <button id="btn-paper">PAPER</button>
+            <button id="btn-scissors">SCISSORS</button>
+        </div>
+        <div class="results">
+            <div class="current-score">
+            </div>
+            <div class="round-score">
+
+            </div>
+            <div class="final-score">
+                
+            </div>
+        </div>
+    </div>
+<script src="rps.js" defer></script>
 </body>
 </html>
